fix ie9 alignment bug for the close icon on search

--- a/src/scss/rows/_search.scss
+++ b/src/scss/rows/_search.scss
@@ -59,6 +59,7 @@
 		@include oIconsGetIcon('cross', white, $_o-header-icon-size-large, $iconset-version: 1);
 		border: 0;
 		margin-left: $_o-header-padding-x;
+		vertical-align: middle;
 
 		@include oGridRespondTo($until: 'M') {
 			display: none;
